--- a/assets/style.css
+++ b/assets/style.css
@@ -22,9 +22,66 @@ body{
   font-size: 45px;
   padding:0 9px 0 9px;
 }
-.home-page h2{
+.home-page h2,h1{
   font-size: 25px;
   padding:15px;
   color: red;
   text-align: center;
 }
+/*---form---*/
+header .formbx{
+  width: 100%;
+  justify-content: center;
+  margin-left: 190px;
+}
+header .formbx h2{
+ margin-left: -490px;
+ color: blue;
+ font-weight: 600px;
+ font-size:52px;
+ text-transform: uppercase;
+ margin-bottom: 20px;
+ letter-spacing: 1px;
+}
+ header .formbx .inputbx,.checkbx{
+  margin-bottom: 29px;
+ 
+
+ }
+ header .formbx form .inputbx span,.checkbx{
+  font-size: 26px;
+  margin-bottom: 15px;
+  display: inline-block;
+  color:blue;
+  font-weight: 300;
+  letter-spacing: 2px;
+  
+ }
+ header .formbx form .inputbx input{
+  width:35%;
+  height: 30px;
+  padding:10px 18px;
+  outline: none;
+  border: 1px solid black;
+  font-weight: 400;
+  font-size: 22px;
+  letter-spacing: 1.5px;
+  border-radius: 23px;
+  
+ }
+
+ header .formbx .inputbx a
+ { 
+   left:190px;
+    font-size: 26px;
+    display: inline-block;
+    font-weight: 300;
+    letter-spacing: 2px;
+    color: white;
+    text-decoration: none;
+    background-color:blue;
+    padding: 12px 34px;
+    border-radius: 12px;
+    position: relative;
+    cursor: pointer; 
+     }
